Fix Site Navigation item width on Safari

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,6 +2,8 @@
 .logo {
   color: $color-dark-light;
   font-size: em($ratio-text-logo);
+  flex-basis: 0;
+  flex-grow: 1;
   height: $height-logo;
   line-height: 1;
   margin-bottom: 0;
