--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -2,8 +2,6 @@
 .site-navigation {
   $r: $ratio-text-tiny;
 
-  flex-basis: 0;
-  flex-grow: 1;
   font-size: em($ratio-text-tiny);
   line-height: (1 / $r);
   text-transform: uppercase;
@@ -18,11 +16,6 @@
     display: block;
     margin-left: $width-gap-small;
     text-align: right;
-
-    &:first-child {
-      flex-basis: 0;
-      flex-grow: 1;
-    }
   }
 
   a {
